--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,44 @@
-
+.box{
+    border: 5px solid greenyellow;
+    background-color: pink;
+}
+.row1{
+    background-color: brown;
+}
+.row1col1{
+    height: 200px;
+    width: 100px;
+    background-color: green;
+}
+.row1col2{
+    background-color: antiquewhite;
+    height: 200px;
+    width: 100px;
+}
+.row2{
+    background-color: brown;
+}
+.row2col1{
+    background-color: aqua;
+    height: 200px;
+    width: 100px;
+}
+.row2col2{
+    background-color: aquamarine;
+    height: 200px;
+    width: 100px;
+}
+.row3{
+    background-color: brown;
+}
+.row3col1{
+    background-color: beige;
+    height: 200px;
+    width: 100px;
+}
+.row3col2{
+    background-color: bisque;
+    height: 200px;
+    width: 100px;
+}
 /* Your CSS Code here. */
