--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,11 @@
     border: 5px solid greenyellow;
     background-color: pink;
 }
-.r1{
+.r{
     background-color: brown;
+    margin: 5px 20px;
 }
+
 .r1c1{
     height: 200px;
     width: 100px;
@@ -15,9 +17,11 @@
     height: 200px;
     width: 100px;
 }
-.r2{
+/* .r2{
     background-color: brown;
-}
+    margin-top:10px;
+    margin-bottom: 10px;
+} */
 .r2c1{
     background-color: aqua;
     height: 200px;
@@ -28,9 +32,11 @@
     height: 200px;
     width: 100px;
 }
-.r3{
+/* .r3{
     background-color: brown;
-}
+    margin-top:10px;
+    margin-bottom: 10px;
+} */
 .r3c1{
     background-color: beige;
     height: 200px;
